Completed Investing Section

--- a/investing/investing.html
+++ b/investing/investing.html
@@ -13,7 +13,7 @@
           </script>
 
           <!-- Page Title -->
-          <title>My Strategy to Financial Literacy</title>
+          <title>My Guide to Financial Literacy</title>
 
           <!-- Meta Tags -->
           <meta charset="UTF-8">
@@ -94,7 +94,7 @@
                               in our educational system is Financial Literacy. This is one topic we are forced to go out and learn 
                               on our own. Statistics show that the average American only has about $150,000 saved for retirement. 
                               That leaves many Americans unprepared for retirement or any other major life event. When I got into 
-                              learning about Financial Planning and investing, it dramatically changed my life. In recent years, I 
+                              learning about Personal Finance and Investing, it dramatically changed my life. In recent years, I 
                               have learned more and more about financial planning through courses on these topics. Here I am going 
                               to share with you my understanding of the concepts so they might help you develop an interest in 
                               learning to Save and Invest. That way you can decide if it's something you want to pursue more 
@@ -108,45 +108,12 @@
                               <a href="portfolio.html">My Portfolio</a>
                          </li>
                          <li>
-                              <a href="planning.html">Financial Planning</a>
+                              <a href="planning.html">Personal Finance</a>
                          </li>
                          <li>
                               <a href="portfoliobuilding.html">Saving and Investing</a>
                          </li>
                     </ul>
-
-                    <section>
-                         <h2 class="investing-headers" id="trading">Trading Around a Core Position</h2>
-                         <p> 
-                              My system for trading around my core position is a simple one. I will accumulate half of my position
-                              for my core holding. Then I will trade around that core position by buying shares into sell offs. Then
-                              I sell some of those shares during the big rallies. I tend to use 20% as my rule. If a stock pulls back 20%,
-                              I will add a little for trading shares. I will keep adding some each 20% it pulls back until it bottoms, 
-                              or I have reached my max position size. When the stock goes back up, I will sell a little each time it goes 
-                              up 20% until I have reached my minimum core position. I will not sell my core position unless I think the 
-                              company is fundamentally broken. Then I will sell everything. 
-                         </p> 
-                         <p>
-                              If the stock hits new highs, I will wait for at least a 20% pull back from that high before I even consider 
-                              buying some trading shares. Stocks in biotech can have very wild swings. We all just witnessed this in 2021 and 
-                              2022. We saw biotech stocks lose 70% or more of their value. That is a huge swing that could be hundreds of 
-                              percent for the investor who buys low and fades the next bull market. Just in the 2020 crash from covid, many 
-                              biotech stocks rallied between 300% and 800% from the bottom of 2020 to the top of 2021. When I think the market 
-                              is extremely bubbly, I will even sell most if not everything and wait. I hit 100% cash in July of 2015 before 
-                              the 2015 and 2016 bear market related to the pricing debate. I hit 90% cash in January of 2021. I think my biggest 
-                              regret was starting to nibble back stocks too soon. I waited a good 20% to 30% off the top of the biotech top, 
-                              but it turned out to be way too soon. 
-                         </p>   
-                         <p>
-                              My style tends to embrace what I find to be the best of both Investing and Trading. For me, it keeps me 
-                              active and engaged with investing. It also allows me to make short term money while
-                              making long term investments. I like to use trading around my core position to use capital gains to pay down
-                              my cost basis. I will track my capital gains and subtract them from my cost basis. Once my cost gets to $0, I 
-                              have paid for my core position. It is now on the house's money. I can hold it forever, and it doesn't cost 
-                              me a thing. 
-                         </p>   
-                         <p class="top-link"><a href="#top">Top</a></p>             
-                    </section>
 
                     <p>&#42; I am not a Financial Advisor. This is just My Strategy. Please refer to your financial advisor before making any investing decisions.</p>
                </div>
