--- a/investing/planning.html
+++ b/investing/planning.html
@@ -81,11 +81,11 @@
 
                <div class="investing-container">
 
-                    <h2 class="investing-headers">Financial Planning</h2>
+                    <h2 class="investing-headers">Personal Finance</h2>
 
                     <section>
                          <p> 
-                              Financial Plannings is a plan on how to manage your money and finances. Most people go through life 
+                              Personal Finance is a plan on how to manage your money and finances. Most people go through life 
                               living from paycheck to paycheck. They buy things they want on their credit card, and they have no idea 
                               if they can even pay for them. The concept of financial planning is about taking control of your money 
                               and having a plan for how you earn, spend and save it to reach all the goals you want to reach in life. 
