--- a/investing/portfoliobuilding.html
+++ b/investing/portfoliobuilding.html
@@ -82,10 +82,10 @@
                <div class="investing-container">
 
                     <section>
-                         <h2 class="investing-headers">Building A Diversified Portfolio</h2>
+                         <h2 class="investing-headers">Saving and Investing</h2>
                          <p> 
                               Investing is the best way a person has to build their money over the long term. When you look at cash 
-                              accounts like Saving, Money Markets and Certificates of Deposit, they pay less than 1% interest on 
+                              accounts like Savings, Money Markets and Certificates of Deposit, they pay less than 1% interest on 
                               average. You might get a few percent out of a CD. If you want to reach your long term financial goals, 
                               you will have to use investing where average returns can be between 6% and 10%. You can get more than 
                               that, but then you have to take on more risk. Investing requires risk, but without investing, you will 
