--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
           </script>
 
           <!-- Page Title -->
-          <title>Learn about Biotech Investing and Science Concepts</title>
+          <title>Biotech2k.com</title>
 
           <!-- Meta Tags -->
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <meta name="description" content="Learn about Biotechnology Investing and Science Concepts">
-          <meta name="keywords" content="Biotechnology, Biotech, Genetics, Immunology, Oncology, Cell Therapies">
+          <meta name="keywords" content="Biotechnology, Biotech, Genetics, Immunology, Oncology, Cell Therapies, Financial Literacy">
           <meta name="author" content="CoderKid2k">
           <meta name="twitter:card" content="summary">
           <meta name="twitter:site:id" content="@biotech2k1">
