--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                          <div>
                               <h2 class="section-title">Recent News</h2>
                               <p>
+                                   <strong>2/10/2023: </strong> I added to my <a href="companies/beam.html">BEAM</a> position today
+                                   to bring it up to 5.22% position.
+                              </p>
+                              <p>
                                    <strong>2/17/2023: </strong> I sold the last of my CDXS position as I lost faith in that company. I 
                                    took my losses over the past 2 years on this one. Now I can put that cash into something that might 
                                    make money istead of just losing me money.
