--- a/companies/companies.html
+++ b/companies/companies.html
@@ -13,7 +13,7 @@
           </script>
 
           <!-- Page Title -->
-          <title>Companies Innovating in Biotechnology</title>
+          <title>Innovative Biotech Companies</title>
 
           <!-- Meta Tags -->
           <meta charset="UTF-8">
