--- a/learning/science.html
+++ b/learning/science.html
@@ -13,7 +13,7 @@
           </script>
 
           <!-- Page Title -->
-          <title>Learn About the Science behind Biotech</title>
+          <title>Learn About the Science</title>
 
           <!-- Meta Tags -->
           <meta charset="UTF-8">
