--- a/investing/portfolio.html
+++ b/investing/portfolio.html
@@ -102,7 +102,7 @@
                               <tr><th>Company</th><th>Position</th><th>Cost Basis</th></tr>
                          </thead>
                          <tbody>
-                              <tr><td>BEAM</td><td>5.22</td><td>$9.20</td></tr>
+                              <tr><td>BEAM</td><td>5.22%</td><td>$9.20</td></tr>
                               <tr><td>NTLA</td><td>4.52%</td><td>$77.50</td></tr>
                               <tr><td>NVTA</td><td>4.52%</td><td>$12.25</td></tr>
                               <tr><td>PACB</td><td>4.37%</td><td>$17.79</td></tr>
