--- a/companies/abcellera.html
+++ b/companies/abcellera.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/12/2023</p>
+                    <p class="updated">Last Updated 2/21/2023</p>
 
 
                     <h1 class="company-name"><a href="https://abcellera.com/">AbCellera</a></h1>
@@ -94,37 +94,40 @@
                               <h2 class="list-header">Profile</h2>
                               <p class="profiles">
                                    AbCellera is using Artificial Intelligence and Machine Learning to focus on developing 
-                                   antibodies. This is a huge space of development with over 164 antibodies in development.
+                                   antibodies. This is a huge space of development with over 174 programs under contract and 101 program starts.
                                    They only work through partners and have no pipeline of their own. They use Artificial Intelligence 
                                    to help sequence and design antibodies. They can even model the simulation of each antibody's response.
-                                   They can use Machine Learning to help pick antibodies that perform exactly to specifications.
+                                   They can use Machine Learning to help pick antibodies that perform exactly to specifications. They are developing 
+                                   programs for T cell engager, Ion Channels and GPCR receptors. They continue to expand their capabilities toward 
+                                   being able to develop programs up to the IND.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I have only been following AbCellera for a short time. I haven't had much time to listen to their 
-                                   management to find out how good of a job they are doing. It will take some time for me to know how 
-                                   good of a CEO Carl Hansen will be. I do think he gets credit for the develop programs they had during 
-                                   Covid. 
+                                   I have only been following AbCellera for a short time, but so far I think CEO Carl Hansen is doing a great job 
+                                   with the company. He has demonstrated the ability of the company to work with partners to develop two antibodies 
+                                   for Covid that did really good royalites during the pandemic. They continue to add new partners and programs while 
+                                   improving their royalty sharing on new programs. They continue to expand their capabilities toward taking programs 
+                                   up to the IND point of development.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Science</h2>
                               <p class="profiles">
-                                   AbCellera doesn't present any data for the assets they help partners design and develop. They do have 
-                                   2 commercial antibodies developed against Covid. They get royalties on all the programs they develop. 
-                                   To really follow AbCellera, you would have to follow all their partners with the data. That makes it more 
-                                   complex for the average investor. They currently have 2 commercial drugs with 7 more in the clinic.
+                                   AbCellera is using AI and Machine learning to develop antibodies for partners. They have 174 
+                                   programs under contract with 8 of them now in the clinic with their programs. They are developing 
+                                   programs around T cell engagers, Ion Channels and GPCR receptors. Oncology makes up over 50% of their 
+                                   indications of target across their partnership programs.
                               </p>
                          </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $868 million
+                                   Cash $886 million
                               </p>
                               <p class="profiles">
                                    Revenues next year are estimated to decline by over 70% to $110 million. That is worth about
@@ -136,15 +139,15 @@
                                    I would value that at .5x multiplier. That would make the pipeline worth about $1 billion in value.
                               </p>                     
                               <p class="profiles">
-                                   All in, that is a $2.368 billion market cap. Based on the 286 million shares outstanding
-                                   on the 10Q, that comes to $8.27.
+                                   All in, that is a $2.386 billion market cap. Based on the 287.6 million shares outstanding, that comes to $8.29.
                               </p>
                          </section>  
 
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Comming soon
+                                   They have 149 programs with downstream incentives in the form of milestone and/or royalties. Their 
+                                   average royalties across the pipline for 2022 was 2.4% across 37 programs. This year is 4.1% across 111 programs. 
                               </p>
                               
                          </section> 
