--- a/companies/abcellera.html
+++ b/companies/abcellera.html
@@ -108,7 +108,7 @@
                               <p class="profiles">
                                    I have only been following AbCellera for a short time, but so far I think CEO Carl Hansen is doing a great job 
                                    with the company. He has demonstrated the ability of the company to work with partners to develop two antibodies 
-                                   for Covid that did really good royalites during the pandemic. They continue to add new partners and programs while 
+                                   for Covid that did really good royalties during the pandemic. They continue to add new partners and programs while 
                                    improving their royalty sharing on new programs. They continue to expand their capabilities toward taking programs 
                                    up to the IND point of development.
                               </p>
@@ -146,8 +146,8 @@
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   They have 149 programs with downstream incentives in the form of milestone and/or royalties. Their 
-                                   average royalties across the pipline for 2022 was 2.4% across 37 programs. This year is 4.1% across 111 programs. 
+                                   They have 149 programs with downstream incentives in the form of milestones and/or royalties. Their 
+                                   average royalties across the pipeline for 2022 was 2.4% across 37 programs. This year is 4.1% across 111 programs. 
                               </p>
                               
                          </section> 
