--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
                          <div>
                               <h2 class="section-title">Website Updates</h2>
                               <p> 
+                                   <strong>2/22/2023: </strong> I finished off the Science Pages with filling out the <a href="learning/biology.html">Biology</a>
+                                   section.
+                              <p> 
+                              <p> 
                                    <strong>2/21/2023: </strong> I finished the build out my <a href="investing/portfoliobuilding.html">Investing</a>
                                    page of the website by adding several new sections today. 
                               <p> 
@@ -131,9 +135,6 @@
                                    The whole investment section is under construction as I expand the topics and content. Most of the links don't 
                                    work yet, but they will once it's finished.
                               </p>
-                              <p> 
-                                   <strong>2/17/2023: </strong> Add my newest guide for Risk Management to the Investing Pages.
-                              <p> 
                          </div>
                     </section>
                </div>
