Clinical Data Building

--- a/companies/blueprint.html
+++ b/companies/blueprint.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 2/16/2023</p>
+                    <p class="updated">Last Updated 2/23/2023</p>
 
                     <h1 class="company-name"><a href="https://www.blueprintmedicines.com/">Blueprint Medicines</a></h1>
 
@@ -184,8 +184,8 @@
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Roche has partnership for 50/50 of US sales and high teens to mid twenties royalties on ex-US sales of 
-                                   Garvretto.
+                                   Roche has cancelled their partnership for Gavretto and will transition the asset back to Blueprint 
+                                   over the next year.
                               </p>
                               <p class="profiles">
                                    CStone has a partnership for China region on Ayvakit, Gavretto and Fisogatinib which they pay a 
