--- a/companies/kymera.html
+++ b/companies/kymera.html
@@ -82,7 +82,7 @@
           <main>
 
                <div class="company-container">
-                    <p class="updated">Last Updated 1/14/2023</p>
+                    <p class="updated">Last Updated 2/23/2023</p>
 
                     <h1 class="company-name"><a href="https://www.kymeratx.com/">Kymera Therapeutics</a></h1>
 
@@ -104,9 +104,12 @@
                          <section class="section-container">
                               <h2 class="list-header">Management</h2>
                               <p class="profiles">
-                                   I have been following Kymera and Nello Mainolfi for a while now. So far, he seems to be doing great. 
-                                   The company is maintaining a good balance sheet while advancing its early clinical trials. It will take 
-                                   time for the data to mature to see which programs will be successful.
+                                   I have been following Kymera and Nello Mainolfi for a while now. So far, I think he is doing a great job. 
+                                   The company is maintaining a good balance sheet while advancing its early clinical trials. They are focused 
+                                   on driving new biology with their assets which means less competition. I think he is driving good  innovation 
+                                   which makes this company exciting. They have generated some data so far to show they can work their way through 
+                                   the clinical data process. It will take more time to see how well they do through the whole process of developing 
+                                   a commercial biotech company.
                               </p>
                          </section> 
                          
@@ -117,17 +120,20 @@
                                    inflammatory cytokines like IL-1. The role of these inflammatory pathways in inflammatory diseases is well 
                                    known. This therapy goes in and degrades the IRAK4 protein so it does not trigger the activation of the cytokines 
                                    that lead to inflammation. There is early efficacy and safety data that shows it can lower symptoms in patients 
-                                   with skin inflammatory diseases. It will be turned over to their partner Sanofi which will now advance it through 
+                                   with skin inflammatory diseases. It has been turned over to their partner Sanofi which will now advance it through 
                                    phase 2 trials for multiple inflammatory disorders like HS and Atopic Dermatitis. 
                               </p>
                               <p class="profiles">
-                                   KT-413 combines the IRAK4 degrader with the IMID degrader to target MyD88 driven tumors. These are typically 
-                                   B cell related cancers that are driven by the IRAK4 pathway. This is in phase 1, and we are waiting on data.
+                                   KT-413 combines the IRAK4 degrader with the IMID degrader to target MyD88 driven tumors. This is an IV infusion 
+                                   every 3 weeks for patients with B cell Non Hodgkin Lymphomas. This is designed to degrade both pathways 
+                                   of IRAK and IMID which are proinflammatory pathways to drive cancer growth. It is currently in the phase 1 
+                                   dose escalation part of the trial. They are seeing 95% knockdown of IMID and 40% knockdown of IRAK4 in early biomarker
+                                   data.
                               </p>
                               <p class="profiles">
-                                   KT-333 inhibits the STAT3 pathway by targeting that protein for degradation. This is being developed for fibrotic 
-                                   diseases and oncology. It is just entering phase 1 for oncology targets and still in preclinical for fibrotic diseases.
-                                   We will have to wait and see how the data works out.
+                                   KT-333 inhibits the STAT3 pathway by targeting that protein for degradation. This is being developed for STAT3 driven 
+                                   hematologic malignancies. It is in the dose escaltion part of the phase 1 with them just completing the first dose level.
+                                   Right now they look to be targeting CTCL and PTCL. They have seen 66% STAT3 knockdown from biomarker data.
                               </p>
                               <p class="profiles">
                                    KT-253 targets MDM2 which is a protein that inhibits p53. The p53 protein is a key regulator of cell survival and 
@@ -140,53 +146,63 @@
                          <section class="section-container">
                               <h2 class="list-header">Valuation</h2>
                               <p class="profiles">
-                                   Cash $560 million
+                                   Cash $559 million
                               </p>
                               <p class="profiles">
-                                   KT-474 has several indications in which it can show efficacy. Just based on the 2 indications 
-                                   it showed data on in phase 1, I think it could easily do $1 billion in sales if the data continues 
-                                   to do well or improves. There are even more indications in which it could be successful. I would give
-                                   this and 1x multiplier as they do have full phase 1 data now. That gives them $1 billion in value. 
+                                   KT-474 has several indications in which it can show efficacy. I think it could easily do $2 billion in sales if the data continues 
+                                   to do well or improves across all the possible indications for IRAK4. Kymera would get 50% of those 
+                                   sales for $1 billion. I would give this and 1x multiplier as they do have full phase 1 data now. That gives them $1.5 billion in value. 
                               </p>
                               <p class="profiles">
-                                   KT-413 has a few smaller indications for B cell lymphomas where it would target MyD88 driven cancers. I think 
-                                   it could do about $500 million in sales if successful. It would get a .1 multiplier until we see some data from 
-                                   the phase 1 trial. That makes it worth $50.
+                                   KT-413 has a patient population of about 37,000 patients in DLBCL where it would target MyD88 driven cancers. I think 
+                                   it could do about $1 billion in sales if successful. It would get a .1 multiplier until we see some data from 
+                                   the phase 1 trial. That makes it worth $100 million.
                               </p>
                               <p class="profiles">
-                                   KT-333 could have really big potential if it works out well in Fibrotic disease and oncology. I would venture 
-                                   a guess of $2 billion in sales. It would depend on the data. I would give this .1 multiplier since it's still early 
-                                   in phase 1 with no data. That makes it worth $200 million.
+                                   KT-333 could have really big potential if it works out well in oncology with PCTL and CTCL. I would venture 
+                                   a guess of about 20,000 to 25,000 patients for these indications. With a price tag of $100,000, that comes to
+                                   at least $1 billion in sales. It would depend on the data and market share. I would give this .1 multiplier since it's still early 
+                                   in phase 1 with no data. That makes it worth $100 million.
                               </p>
                               <p class="profiles">
                                    KT-253 is really hard to predict since I don't have any data on this program yet. I would venture a guess of $1 billion 
                                    if all goes well. That would be worth $100 million value with being preclinical.
                               </p>
                               <p class="profiles">
-                                   All in, that is a $1.91 billion market cap. Based on the 55 million shares outstanding, that comes to $34.72.
+                                   All in, that is a $1.859 billion market cap. Based on the 55.183 million shares outstanding, that comes to $33.68.
                               </p>
                          </section> 
                          
                          <section class="section-container">
                               <h2 class="list-header">Partnerships</h2>
                               <p class="profiles">
-                                   Coming Soon
+                                   Sanofi for IRAK4 in inflammation plus one additional target for world wide outside of oncology. Kymera has the opt in right to 
+                                   any asset for up to 50% of the US. They are entitled to up to $1.7 billion in milestones, and they get royalties in 
+                                   the high single digits to high teens on any areas outside the US.
+                              </p>
+                              <p class="profiles">
+                                   Vertex partnership for areas outside Kymera's core oncology and inflammation areas. They are 
+                                   entitled to upward of $170 million in milestones per licensed product. They will also get low single 
+                                   digit royalties on these products.
                               </p>
                          </section>
 
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   KT-474 Turn over to Sanofi for Phase 2
+                                   KT-474 Multiple Phase 2 expected to be started by Sanofi in 2023
                               </p>
                               <p class="profiles">
-                                   KT-413 phase 1 data later this year
+                                   KT-413 Phase 1 dose escalation in progress
                               </p>
                               <p class="profiles">
-                                   KT-333 phase 1 data later this year
+                                   KT-333 Phase 1 dose escalation in progress
                               </p>
                               <p class="profiles">
-                                   KT-253 IND Enabling Studies
+                                   KT-253 Sart Phase 1 in early 2023
+                              </p>
+                              <p class="profiles">
+                                   Announce next 2 preclinical asset targets this year.
                               </p>
                          </section> 
 
