--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="section-title">Website Updates</h2>
+                              <p>
+                                   <strong>2/23/2023: </strong> I started building out the Clinical Data section of 
+                                   the site. Its currently under construction so it will probably be a mess until I get
+                                   the pages laid out. 
+                              </p>
                               <p> 
                                    <strong>2/22/2023: </strong> I finished off the Science Pages with filling out the <a href="learning/biology.html">Biology</a>
                                    section.
@@ -130,11 +135,6 @@
                                    <a href="investing/portfoliobuilding.html">Portfolio Building</a> and Investing
                                    section. 
                               </p>
-                              <p>
-                                   <strong>2/18/2023: </strong> I added a <a href="investing/planning.html">Financial Planning</a> page today.
-                                   The whole investment section is under construction as I expand the topics and content. Most of the links don't 
-                                   work yet, but they will once it's finished.
-                              </p>
                          </div>
                     </section>
                </div>
@@ -143,7 +143,7 @@
                          <div>
                               <h2 class="section-title">Youtube</h2>
                               <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUl4u3cNGP63LmSVIVzy584-ZbjbJ-Y63" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL5xvztUyPgDoQOnuWsLbrlqShE27M9PQD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                               </div>
                          </div>
                     </section>
@@ -152,7 +152,7 @@
                          <div>
                               <h2 class="section-title">Twitter</h2>
                               <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">1/<a href="https://twitter.com/metagenomi?ref_src=twsrc%5Etfw">@metagenomi</a> announced the close of a Series B exten­sion <a href="https://twitter.com/hashtag/financing?src=hash&amp;ref_src=twsrc%5Etfw">#financing</a> co-led by <a href="https://twitter.com/novoholdings?ref_src=twsrc%5Etfw">@novoholdings</a> &amp; <a href="https://twitter.com/CatalioCapital?ref_src=twsrc%5Etfw">@CatalioCapital</a> with par­tic­i­pa­tion of new <a href="https://twitter.com/hashtag/investors?src=hash&amp;ref_src=twsrc%5Etfw">#investors</a> - <a href="https://twitter.com/LeapsByBayer?ref_src=twsrc%5Etfw">@LeapsByBayer</a> &amp; <a href="https://twitter.com/moderna_tx?ref_src=twsrc%5Etfw">@moderna_tx</a>. This $100M financ­ing brings the total Series B pro­ceeds to $275M. <a href="https://twitter.com/hashtag/CRISPR?src=hash&amp;ref_src=twsrc%5Etfw">#CRISPR</a> <a href="https://twitter.com/hashtag/Genomics?src=hash&amp;ref_src=twsrc%5Etfw">#Genomics</a> <a href="https://twitter.com/hashtag/BioTech?src=hash&amp;ref_src=twsrc%5Etfw">#BioTech</a> <a href="https://t.co/wQtna1yqAe">pic.twitter.com/wQtna1yqAe</a></p>&mdash; Yair Einhorn (@yaireinhorn) <a href="https://twitter.com/yaireinhorn/status/1627720163591061511?ref_src=twsrc%5Etfw">February 20, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://t.co/HwJ63OKTCN">https://t.co/HwJ63OKTCN</a><br><br>Blueprint Medicines Corporation (NASDAQ: BPMC) today announced it will regain global commercialization and development rights to GAVRETO® (pralsetinib), exclud...</p>&mdash; Biotech2k (@Biotech2k1) <a href="https://twitter.com/Biotech2k1/status/1628747992122392576?ref_src=twsrc%5Etfw">February 23, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                               </div>
                          </div>
                     </section>
